fixing vulnerabilities and updating broken css

--- a/src/styles/landing-dark.css
+++ b/src/styles/landing-dark.css
@@ -3,7 +3,7 @@
   }
 
   .header {
-    @apply h-40 main-gradient
+    @apply h-36 main-gradient
   }
 
   .main-bg{
